--- a/mpzAdminClient/.project
+++ b/mpzAdminClient/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mpzCsvUpLoader</name>
+	<name>mpzAdminClient</name>
 	<comment></comment>
 	<projects>
 	</projects>
