add gitignore setting

--- a/mpzAdminClient/conf.properties
+++ b/mpzAdminClient/conf.properties
@@ -1,9 +1,12 @@
 mpz.admin.timeout=30000
 
-mpz.admin.url.export_dev=http://local.admin.www.mpz.mobcast.io:8082/
+mpz.admin.url.dev=http://local.admin.www.mpz.mobcast.io:8082/
 mpz.admin.url.sand=http://admin.www.sand.mpz.mobcast.io/
-#mpz.admin.url.stag=http://admin.www.stag.mpz.mobcast.io/
-#mpz.admin.url.expo=http://admin.www.expo.mpz.mobcast.io/
+mpz.admin.url.stag=http://admin.www.stag.mpz.mobcast.io/
+mpz.admin.url.expo=http://admin.www.expo.mpz.mobcast.io/
+mpz.admin.url.export_sand=http://admin.www.sand.mpz.mobcast.io/
+mpz.admin.url.export_stag=http://admin.www.stag.mpz.mobcast.io/
+mpz.admin.url.export_expo=http://admin.www.expo.mpz.mobcast.io/
 
 csv.file.json=\
 [\
